# scorecards_server

backend/: Cargo.toml  index.html  panic_log
backend/src/: db.rs  html.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml
frontend/html_src/: competition_rounds.html  group.html  style.css  validated.html
frontend/src/: js.js  lib.rs
