[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
wca_oauth = { path = "../../WCA_tools_lib/wca_oauth" }
wca_scorecards_lib = { path = "../../WCA_tools_lib/wca_scorecards_lib" }
scorecard_to_pdf = { path = "../../WCA_tools_lib/scorecard_to_pdf" }
tokio = { version = "1.25.0", features = ["full"] }
actix-web = { version = "4.3.0", features = ["rustls"] }
postcard = { version = "1.0.2", features = ["alloc"], default-features = false}
common = { path = "../common" }
rand = "0.7"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
base64 = "0.21.0"
