[package]
name = "backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.1"
wca_oauth = { git = "https://github.com/Daniel-Anker-Hermansen/WCA_tools_lib" }
wca_scorecards_lib = { git = "https://github.com/Daniel-Anker-Hermansen/WCA_tools_lib" }
scorecard_to_pdf = { git = "https://github.com/Daniel-Anker-Hermansen/WCA_tools_lib" }
tokio = { version = "1.25.0", features = ["full"] }
actix-web = { version = "4.3.0", features = ["rustls"] }
common = { path = "../common" }
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
chrono = "0.4.24"
futures = "0.3.30"
panic-message = "0.3.0"
