[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
js-sys = "0.3.61"
postcard = { version = "1.0.2", features = ["alloc"], default-features = false}
serde = "*"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "*"
web-sys = { version = "0.3.61", features = [
    "console",
    "XmlHttpRequest",
    "Document",
    "Window",
    "Element",
    "Node",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
] }

[profile.release]
opt-level = "s"
