[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "console",
    "XmlHttpRequest",
    "Document",
    "Window",
    "Element",
    "Node",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "HtmlTableElement",
    "HtmlCollection",
    "HtmlTableRowElement",
    "RequestInit",
] }

[profile.release]
opt-level = "s"
